--- a/src/projects.css
+++ b/src/projects.css
@@ -153,9 +153,9 @@
 .together img {
     padding: 0;
     margin: 0;
-    height: 24px;
+    height: 12px;
     transition: transform 0.2s ease 0.1s; 
-    width: 24px; /* Set proportional width */
+    width: 12px; /* Set proportional width */
     margin-left: 30px; /* Add spacing between text and icon */
 }
 
@@ -258,4 +258,13 @@
   }
 .proj-intro, .projects-list, .multi-select{
     margin-left: 48px;
+}
+
+@media (max-width:400px) {
+    .fluid-canvas{
+        height: 80vh;
+    }
+    .home-background {
+        background-color: #3a86ff;
+    }
 }
