--- a/src/intro.css
+++ b/src/intro.css
@@ -105,6 +105,7 @@
   .main-head h2{
     font-size: 36px;
     width: 70vw;
+    pointer-events: none;
   }
 
   .button-grp button{
@@ -144,7 +145,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 70vh;
+    height: 90vh;
     width: 100%;
     z-index: 2;
   }
@@ -188,6 +189,9 @@
     font-size: 16px;
     z-index: 10;
     pointer-events: auto;
+  }
+  .button-grp button{
+    margin:0;
   }
 }
 
