--- a/src/featured.css
+++ b/src/featured.css
@@ -48,7 +48,7 @@
     width: 60%;
     height: 40px;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
 .learnBtn img{
   pointer-events: all;
@@ -106,7 +106,6 @@
 }
 
 .box{
-  pointer-events: auto;
   position: relative;
   margin-left: 10px;
   margin-right: 10px;
@@ -117,6 +116,11 @@
   -webkit-backdrop-filter: blur(8px); 
   border: 1px solid rgba(255, 255, 255, 0.1); 
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
+  flex: 0 0 auto; /* ✅ don't shrink, keep width */
+  width: 350px;   /* or whatever width you want */
+  height: auto;   /* or fixed height if preferred */
+  background: #222;
+  border-radius: 12px;
 }
 .box img {
   width: 350px;
@@ -141,17 +145,6 @@
 .box:hover .box-text {
   opacity: 1;
 }
-.box {
-  flex: 0 0 auto; /* ✅ don't shrink, keep width */
-  width: 350px;   /* or whatever width you want */
-  height: auto;   /* or fixed height if preferred */
-  background: #222;
-  border-radius: 12px;
-
-}
-.leftProj h1{
-  margin-top: 20px;
-}
 
 @keyframes fadeIn {
   from {
@@ -162,28 +155,39 @@
   }
 }
 
+.leftProj h1{
+  margin-top: 20px;
+}
 .rightProj, .leftProj {
   animation: fadeIn 1s ease-in forwards;
 }
+.leftProj h5{
+  max-width: 500px;
+}
 
 .rightProj img{
-  width: 100%;
   box-sizing: border-box;
+  max-width: 500px;
   scrollbar-width: none; /* Firefox */
 }
 .x::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
 
+.learnBtn, .box{
+  pointer-events: auto;
+}
+
+
 
 @media (max-width:900px) {
-  .leftProj{
+
+  .leftProj, .rightProj{
     width: 100%;
   }
   .featured{
     flex-direction: column;
     align-items: center;
-    width: 80%;
   }
   
   .leftProj h1{
@@ -191,26 +195,45 @@
   }
 
   .rightProj {
-    margin-left: 48px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 12px;
-    width: 80%;
     margin: 0 auto;
   }
 
   .rightProj img{
     border-radius: 12px;
     object-fit:cover;
-    height: 300px;
+    width:100%;
+
   }
   .learnBtn{
     margin-left: 0;
   }
+
+  .leftProj{
+    height: 300px;
+    padding: 0;
+  }
+
+
+}
+
+
+.featured{
+  height: auto;
+  width: 80%;
+  padding:20px;
+}
+
+.proj-section{
+  width: 80%;
+  padding:20px;
 }
 
 @media (max-width: 400px) {
+  
   .techstack{
     gap: 5px;
     width: 100%;
@@ -218,11 +241,17 @@
   .leftProj h1{
     font-size: 32px;
   }
-  .learnBtn{
-    pointer-events: auto;
+  .proj-section h3{
+    font-size: 32px;
   }
-  .learnBtn 
   .proj-section h4{
     font-size: 24px;
   }
+  .rightProj img{
+    width: 100%;
+  }
+  .rightProj{
+    background-color: aqua;
+  }
+
 }
