--- a/src/App.css
+++ b/src/App.css
@@ -82,12 +82,18 @@
 
 .tech-item {
   background-color: #ddd;
-  padding: 10px 20px;
+  padding: 0px 20px;
   border-radius: 8px;
   font-weight: bold;
   font-size: 14px;
   color: #000;
   white-space: nowrap;
+
+}
+.tech-grid ul{
+  list-style-type: none;
+  padding:20px;
+  margin-bottom: 10px;
 }
 /* 
 .cursor-overlay {
@@ -350,4 +356,21 @@
   to {
     opacity: 1;
   }
+}
+
+
+.programming {
+  background-color: #58e25b;
+}
+
+.framework {
+  background-color: #218ef3;
+}
+
+.software {
+  background-color: #00ffbb; 
+}
+
+.database {
+  background-color: #ddee49; 
 }
