--- a/src/ScrollingCarousel.css
+++ b/src/ScrollingCarousel.css
@@ -29,7 +29,16 @@
       transform: translateX(0);
     }
     100% {
-      transform: translateX(-50%);
+      transform: translateX(-100%);
     }
   }
+@media (max-width: 500px) {
+  .carousel-track {
+    animation: scroll 20s linear infinite;
+  }
+  .carousel-item img {
+    width: 50px;
+    height: 50px;
+  }
+}
   
